	* src/NSCharacterSet.m ([NSCharacterSet +_bitmapForSet:number:]):
 	Revert last change.

	* src/Makefile.in (GNUSTEP_HEADERS): Added include/NSHost.h.
	(GNUSTEP_MFILES): Added NSHost.m.

	* src/NSCharacterSet.m ([NSCharacterSet +_bitmapForSet:number:]):
 	Use NSBundle's pathForResource:ofType:inDirectory method properly.
  	(Reported by Stevo Crvenkovski <stevoc@lotus.mpt.com.mk>.)

Sun Mar 23 19:55:19 1997  Mark Kettenis  <kettenis@phys.uva.nl>

	* src/Makefile.in: Update config.h.in in $(srcdir)/src/include.
	* configure.in: Look for config.guess in $(srcdir).

Sat Mar 22 18:25:43 1997  Mark Kettenis  <kettenis@phys.uva.nl>

	* src/NSDate.m ([NSDate +timeIntervalSinceReferenceDate]): Don't
	use struct timezone.
	([NSDate -timeIntervalSince1970]): New method.
	([NSDate -isEqual:]): Correct bug if other specifies a later date.

Sun Mar 23 22:14:21 1997  Stevo Crvenkovski  <stevoc@lotus.mpt.com.mk>

        * src/NSGString.m: New file Initial implementation of Unicode
        * src/include/NSGString.h : New file Interface for NSGString
        * src/NSGSequence.m: New file - class that deals with Unicode
 	composite character sequences
	* src/include/NSGSequence.h : New file Interface for NSGSequence
	* src/Unicode.m: New file - functions for Unicode
	* src/include/Unicode.h : New file
		
	* src/Makefile.in: Added NSGString.m, NSGString.h, NSGSequence.m,
 	NSGSequence.h, Unicode.m, Unicode.h
        
	* src/NSGCString.m ([NSGCString -length]): Method implemented.
	([NSGCString -characterAtIndex]): Changed to work
	with encodings
	([NSGCString -_baseLength]): private method for
	composite character sequences.
	([NSGCString -initWithString:]): CString implementation
	moved here from NSString.m

        * src/NSString.m : Changed NSString_concrete_class to NSGString
 	and NSMutableString_concrete_class to NSGMutableCString
	([NSString +stringWithCharacters]): Method implemented.
	([NSString -initWithCharacters:length:]): Method implemented.